# brace

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: ci.yml
crates/brace/: Cargo.toml
crates/brace-macros/: Cargo.toml
crates/brace-macros/src/: lib.rs
crates/brace/src/lib/: brace.rs
crates/brace/src/lib/util/: mod.rs
crates/brace/src/lib/web/: mod.rs
crates/brace/src/lib/web/routes/: index.rs
crates/brace/src/lib/web/server/: mod.rs
crates/brace/tests/: cli.rs  web.rs
