[package]
name = "brace"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "The brace application framework."
repository = "https://github.com/brace-rs/brace"
license = "MIT OR Apache-2.0"
edition = "2018"
autobins = false

[lib]
path = "src/lib/brace.rs"

[features]
default = []
cli = ["clap"]

[dependencies]
clap = { version = "3.0.0-beta.1", git = "https://github.com/clap-rs/clap", rev = "81457178fa7e055775867ca659b37798b5ae9584", optional = true }

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"

[[bin]]
name = "brace"
path = "src/bin/brace.rs"
required-features = ["cli"]
